--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/cookie_mSo_icon.ico">
+  <meta name="description" content="Resume for Natalie Kong">
+  <meta name="author" content="862277113">
 
-  <title>John Doe - Business Administration</title>
+  <title>Natalie Kong - Business Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Natalie Kong</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/NatalieKong.jpg " alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Natalie Kong
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Marketing📚</div>
+        <p class="lead mb-4">Hello, my name is Natalie Kong and I am a first year undergraduate student at University of California, Riverside with a major in business marketing. In high school, I spent most of my time balancing multiple extracurriculars as well as my school work and relationships with my peers. I was captain for both my tennis and golf team as well as playing on the basketball team. Having the role as captain allowed me to step into a leadership position at a young age and learn how to teach my teammates how to play, support each other even in our losses, and communicate and adapt to others and their needs. Every person has their own unique struggles and I am able to listen and help them become better people and players. In this role, I also planned events including game days, senior nights, fundraisers, and summer conditioning, which I led. <br><br>
 
-        Enter bio here<br><br>
+        By planning these events, my time management skills improved as I had to make sure the event went smoothly and everyone knew their responsibilities, as well as, make sure I was doing well in school and keeping up with my work. This, at times, was extremely stressful and took a toll on my mental health, but I was always able to get everything done on time while also making sure I had time to focus on myself. I also was Vice President of the Acts of Random Kindness Club my Sophomore and Junior year and earned the role of President my Senior year of high school. The Acts of Random Kindness club is just as what you expect it be: a community striving to make high school a little more pleasant by conducting uplifting campaigns, activities, and projects. I chose to take a leadership position in this club because I love helping people and being able to bring a smile to their faces. Although the activities that we do in the club are not extreme like buying a person a house, we were only high school students and what we were able to do was enough to at least make someone feel loved and appreciated which is what I admired. Being able to lead a group of around 100 students that all had a common goal of spreading kindness, was an honor in itself. It was such an amazing feeling knowing that all of these students wanted to bring light to such a dark world. 
+<br><br>
 
-        Enter bio here
+        As Vice President I helped plan events, prepared slides and activities for monthly club meetings, supported my team, and led board meetings. With planning events, I am able to communicate, work around peoples’ schedules, reach out to other organizations and companies to collaborate with them, and think creatively to make the event enjoyable as well as helpful to those in our community. One of the main events that I put together was called Sandwiches for Hope. For this event, I had to reach out to three other local high schools’ Acts of Random Kindness clubs to collaborate with and a local homeless shelter where we would donate the sandwiches to after the event.When meeting with the other clubs, we planned the finances (who would buy what), marketing (creating flyers, posters, and social media posts), and the logistics (When? Where? What?) of the event. I had meetings with my board members to inform them about what the event is and what each of their roles were. We put lots of hours of work into this event including painting a backdrop, which took 5+ hours.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.youtube.com/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/nataliekong013">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.netflix.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:nataliekong02@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +97,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Created a small social media platform on Tiktok<br> 
+              • Fed 100+ homeless people as President in the Acts of Random Kindness Club<br>
+              • Created posters and flyers for school-wide rallies<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,11 +154,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Batchelors in Business Administration and Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2024 - June 2025</span>
           </div>
         </div>
 
@@ -191,7 +192,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_4682.jpg" width="500px">
+    <img src="img/IMG_1724.JPG" width="500px"><br>
+    <img src="img/IMG_4683.jpg" width="500px">
+    <img src="img/IMG_8213.JPG" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +203,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Natalie Kong</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
